[metadata]
name = acbl-parser
version = 0.0.1
description = ACBL file parser
license = GPL-3.0
author = Will Tekulve
author_email = tekulve.will@gmail.com
# url = https://github.com/Cog-Creators/Red-DiscordBot
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
packages = find_namespace:
python_requires = >=3.8.1
install_requires =
    Click==7.0

[options.entry_points]
console_scripts =
    acbl-parser=acbl_parser.__main__

[options.packages.find]
include =
    acbl_parser
